<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.developsdm.moneywithlivedata.exchange.ExchangeActivity">

    <LinearLayout
        android:id="@+id/layDepositValues"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="35"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_deposit_label"
                android:textSize="@dimen/primary_text_size"
                android:textStyle="bold" />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/tvDeposit1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/primary_text_size"
                android:textStyle="normal"
                tools:text="6666" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDec"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/dec_button_label"
                android:textSize="@dimen/primary_text_size" />

            <Button
                android:id="@+id/btnInc"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/inc_button_label"
                android:textSize="@dimen/primary_text_size" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="35"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_deposit_label"
                android:textSize="@dimen/primary_text_size"
                android:textStyle="bold" />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/tvDeposit2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/primary_text_size"
                android:textStyle="normal"
                tools:text="777" />

        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layDepositValues"
        android:padding="16dp">

        <Button
            android:id="@+id/btnAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept_exchange_button_label" />

    </RelativeLayout>

</RelativeLayout>